--- a/photo-album/components/Buttons/Buttons.module.css
+++ b/photo-album/components/Buttons/Buttons.module.css
@@ -5,6 +5,12 @@
   border-radius: 0 5px 5px 0;
 }
 
+@media screen and (min-width: 900px) {
+  .buttonsContainer{
+    display: none;
+  }
+}
+
 .button {
   background-color: #ececec9a;
   border-radius: 0 50px 50px 0;
